
  API BREAKS:

   * ``Branch.append_revision`` is removed altogether; please use 
     ``Branch.set_last_revision_info`` instead.  (Martin Pool)

   * ``Transport.should_cache`` has been removed.  It was not called in the
     previous release.  (Martin Pool)

   * NULL_REVISION is returned to indicate the null revision, not None.
     (Aaron Bentley)

  INTERNALS:

   * New trace function ``mutter_callsite`` will print out a subset of the
     stack to the log, which can be useful for gathering debug details.
     (Robert Collins)

    * ``bzrlib.pack.ContainerWriter`` now tracks how many records have been
      added via a public attribute records_written. (Robert Collins)

    * New method ``bzrlib.transport.Transport.get_recommended_page_size``.
      This provides a hint to users of transports as to the reasonable
      minimum data to read. In principle this can take latency and
      bandwidth into account on a per-connection basis, but for now it
      just has hard coded values based on the url. (e.g. http:// has a large
      page size, file:// has a small one.) (Robert Collins)

    * New method on ``bzrlib.transport.Transport`` ``open_write_stream`` allows
      incremental addition of data to a file without requiring that all the
      data be buffered in memory. (Robert Collins)

    * New parameter on ``bzrlib.transport.Transport.readv``
      ``adjust_for_latency`` which changes readv from returning strictly the
      requested data to inserted return larger ranges and in forward read order
      to reduce the effect of network latency. (Robert Collins)

    * ``bzrlib.transport.Transport.put_file`` now returns the number of bytes
      put by the method call, to allow avoiding stat-after write or
      housekeeping in callers. (Robert Collins)


bzr 0.90 2007-08-??
===================

  IMPROVEMENTS:

    * Documentation is now organized into multiple directories with a level
      added for different languages or locales. Added the Mini Tutorial